--- a/index.html
+++ b/index.html
@@ -22,11 +22,58 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/DODGER.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/DODGER.png">
 
-<link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
-</html>
+    <!-- title of the page -->
+    <title> Blue Heaven Quiz Master</title>
+
+
+</head>
 <body>
     <div>
         <h1>This is the QUIZ of the Century</h1>
     </div>
+    <div>
+        <ul>
+            <li><a href="general-quiz">General Quiz</a></li>
+            <li><a href="history-quiz">History Quiz</a></li>
+            <li><a href="geography-quiz">Geography Quiz</a></li>
+            <li><a href="feedback">Feedback</a></li>
+        </ul>
+    </div>
+
+
+    <footer class="footer">
+        <h2 class="footerh1">Copyright © 2024 -Rights Reserved</h2>
+        <h2 class="footerh2">Author: Roshan Neville Sequeira</h2>
+        <nav>
+            <ul class="footernavigation">
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i
+                            class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our YouTube page (opens in a new tab)"><i
+                            class="fa-brands fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram page (opens in a new tab)"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
+
+            </ul>
+        </nav>
+    </footer>
+    <!--Fontawesome script for our social media icons-->
+    <script src="https://kit.fontawesome.com/fd8093e34d.js" crossorigin="anonymous"></script>
 </body>
+
+</html>
