"create css style to push footer down"

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 
             </ul>
         </nav>
+        <main>
+            
+        </main>
     </footer>
     <!--Fontawesome script for our social media icons-->
     <script src="https://kit.fontawesome.com/fd8093e34d.js" crossorigin="anonymous"></script>
