rename html files in file directory

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
 
     <!-- title of the page -->
     <title> Blue Heaven Quiz Master</title>
-
-
 </head>
 <body>
+
     <div>
-        <h1>This is the QUIZ of the Century</h1>
+        <h1 class="h1styling">This is the QUIZ of the Century</h1>
     </div>
     <div>
         <ul>
@@ -42,7 +41,8 @@
         </ul>
     </div>
 
-
+<main>
+</main>
     <footer class="footer">
         <h2 class="footerh1">Copyright © 2024 -Rights Reserved</h2>
         <h2 class="footerh2">Author: Roshan Neville Sequeira</h2>
@@ -70,10 +70,8 @@
                 </li>
 
             </ul>
-        </nav>
-        <main>
-            
-        </main>
+        </nav>         
+        
     </footer>
     <!--Fontawesome script for our social media icons-->
     <script src="https://kit.fontawesome.com/fd8093e34d.js" crossorigin="anonymous"></script>
