change header and body background color

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </div>
     <div>
         <ul>
-            <li><a href="general-quiz">General Quiz</a></li>
-            <li><a href="history-quiz">History Quiz</a></li>
-            <li><a href="geography-quiz">Geography Quiz</a></li>
-            <li><a href="feedback">Feedback</a></li>
+            <li><a href="general-quiz.html">General Quiz</a></li>
+            <li><a href="history-quiz.html">History Quiz</a></li>
+            <li><a href="geography-quiz.html">Geography Quiz</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
         </ul>
     </div>
 
