--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </head>
 <body>
 
-    <div>
-        <h1 class="h1styling">This is the QUIZ of the Century</h1>
+    <div class="h1styling">
+        <h1>This is the QUIZ of the Century</h1>
     </div>
     <div>
         <ul>
