--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div>
         <ul>
-            <li><a href="general-quiz.html">General Quiz</a></li>
+            <li><a href="general-quiz.html" aria-label="Visit our Twitter page" >General Quiz</a></li>
             <li><a href="history-quiz.html">History Quiz</a></li>
             <li><a href="geography-quiz.html">Geography Quiz</a></li>
             <li><a href="feedback.html">Feedback</a></li>
