create flex container

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="h1styling">
         <h1>This is the QUIZ of the Century</h1>
     </div>
-    <div>
+    <div class="flex-container">
         <ul>
             <li><a href="general-quiz.html" aria-label="Visit our Twitter page" >General Quiz</a></li>
             <li><a href="history-quiz.html">History Quiz</a></li>
