--- a/index.html
+++ b/index.html
@@ -27,52 +27,55 @@
     <!-- title of the page -->
     <title> Blue Heaven Quiz Master</title>
 </head>
+
 <body>
 
     <div class="h1styling">
         <h1>This is the QUIZ of the Century</h1>
     </div>
-    <div class="flex-container">
-        <ul>
-            <li><a href="general-quiz.html" aria-label="Visit our Twitter page" >General Quiz</a></li>
+    <div>
+        <ul class="navbar">
+            <li><a href="general-quiz.html" aria-label="Visit our Twitter page">General Quiz</a></li>
             <li><a href="history-quiz.html">History Quiz</a></li>
             <li><a href="geography-quiz.html">Geography Quiz</a></li>
             <li><a href="feedback.html">Feedback</a></li>
         </ul>
     </div>
 
-<main>
-</main>
-    <footer class="footer">
-        <h2 class="footerh1">Copyright © 2024 -Rights Reserved</h2>
-        <h2 class="footerh2">Author: Roshan Neville Sequeira</h2>
-        <nav>
-            <ul class="footernavigation">
-                <li>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i
-                            class="fa-brands fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens in a new tab)"><i
-                            class="fa-brands fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our YouTube page (opens in a new tab)"><i
-                            class="fa-brands fa-youtube"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Instagram page (opens in a new tab)"><i
-                            class="fa-brands fa-instagram"></i></a>
-                </li>
+    <main>
+    </main>
+    <div>
+        <footer>
+            <h2>Copyright © 2024 -Rights Reserved</h2>
+            <h2>Author: Roshan Neville Sequeira</h2>
+            <nav>
+                <ul class="nav">
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our Facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our Twitter page (opens in a new tab)"><i
+                                class="fa-brands fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our YouTube page (opens in a new tab)"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram page (opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
+                    </li>
 
-            </ul>
-        </nav>         
-        
-    </footer>
+                </ul>
+            </nav>
+
+        </footer>
+    </div>
     <!--Fontawesome script for our social media icons-->
     <script src="https://kit.fontawesome.com/fd8093e34d.js" crossorigin="anonymous"></script>
 </body>
