style header to be responsive

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     </main>
     <div>
         <footer>
-            <h2>Copyright © 2024 -Rights Reserved</h2>
-            <h2>Author: Roshan Neville Sequeira</h2>
+
             <nav>
                 <ul class="nav">
                     <li>
@@ -73,6 +72,7 @@
 
                 </ul>
             </nav>
+            <p2 class="footerp2">Copyright © 2024 - Rights Reserved Author: Roshan Neville Sequeira</p2>
 
         </footer>
     </div>
