style copyright and author paragraph using pre element

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 </ul>
             </nav>
-            <p2 class="footerp2">Copyright © 2024 - Rights Reserved Author: Roshan Neville Sequeira</p2>
+            <pre>                                                                 Copyright © 2024 - All Rights Reserved     Author: Roshan Neville Sequeira</pre>
 
         </footer>
     </div>
