create div and button config for controls area

--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
     </div>
 
     <main>
+         <!-- This is the main Game Area -->
+          <div class="game-area">
+            <!-- This is the Control Area -->
+             <div class="controls-area">
+                <button class=""btn btn--big btn--green"></button>
+                <button class=""btn btn--big btn--blue"></button>
+                <button class=""btn btn--big btn--orange"></button>
+                <button class=""btn btn--big btn--red"></button>
+             </div>
+
+
+          </div>
+          <div class="Score-area">
+            <p> Correct Answers</p>
+            <p> Incorrect Answers</p>
+          </div>
     </main>
     <div>
         <footer>
