add fontawesome fonts to button elements

--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
             <!-- This is the Control Area -->
              <div class="controls-area">
                 <button class=""btn btn--big btn--green"></button>
+                <!-- create font-awesome fonts -->
+                <i class="fa-solid fa-brain"></i>
                 <button class=""btn btn--big btn--blue"></button>
+                <i class="fa-solid fa-globe"></i>
                 <button class=""btn btn--big btn--orange"></button>
+                <i class="fa-solid fa-stethoscope"></i>
                 <button class=""btn btn--big btn--red"></button>
+                <i class="fa-brands fa-internet-explorer"></i>
+
              </div>
 
 
