create div and span for questions area

--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
                 <i class="fa-brands fa-internet-explorer"></i>
 
              </div>
-
+            <div class="quesion-area">
+                <span id=operand1>0</span>
+                <span id=operator>x</span>
+                <span id="operator2">0</span>
+                 <!-- no id as it will not be referenced from Javascript -->
+                <span>=</span>
+            </div>
 
           </div>
           <div class="Score-area">
