creat input area and submit button for questions area

--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
                 <span id="operator2">0</span>
                  <!-- no id as it will not be referenced from Javascript -->
                 <span>=</span>
+                 <!-- for mobile users -->
+                <p class="answer-message">Enter Answer </p>
+            <input id="answer-box" type="text">
             </div>
-
-          </div>
+            <button class="btn btn--gray" type="text"></button>
+          
           <div class="Score-area">
             <p> Correct Answers</p>
             <p> Incorrect Answers</p>
