add logos to header and navbar headings

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 <body>
 
     <div class="h1styling">
-        <h1>This is the QUIZ of the Century</h1>
+        <h1> <i class="fa-solid fa-puzzle-piece"> </i>This is the QUIZ of the Century</h1>
     </div>
     <div>
         <ul class="navbar">
-            <li><a href="general-quiz.html" aria-label="Visit our Twitter page">General Quiz</a></li>
-            <li><a href="history-quiz.html">History Quiz</a></li>
-            <li><a href="geography-quiz.html">Geography Quiz</a></li>
+            <li><a href="general-quiz.html">General Quiz <i class="fa-solid fa-brain"></i></a></li>
+            <li><a href="history-quiz.html">History Quiz <i class="fa-brands fa-internet-explorer"></i></a></li>
+            <li><a href="geography-quiz.html">Geography Quiz  <i class="fa-solid fa-globe"></i></a></li>
             <li><a href="feedback.html">Feedback</a></li>
         </ul>
     </div>
@@ -68,7 +68,7 @@
                 <p class="answer-message">Enter Answer </p>
             <input id="answer-box" type="text">
             </div>
-            <button class="btn btn--gray" type="text"></button>
+            <button class="btn btn--gray" type="text">Submit Answer</button>
           
           <div class="Score-area">
             <p> Correct Answers</p>
