add logo to feedback list item in navbar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="general-quiz.html">General Quiz <i class="fa-solid fa-brain"></i></a></li>
             <li><a href="history-quiz.html">History Quiz <i class="fa-brands fa-internet-explorer"></i></a></li>
             <li><a href="geography-quiz.html">Geography Quiz  <i class="fa-solid fa-globe"></i></a></li>
-            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="feedback.html">Feedback <i class="fa-solid fa-phone-flip"></i></a></li>
         </ul>
     </div>
 
@@ -72,7 +72,7 @@
           
           <div class="Score-area">
             <p> Correct Answers</p>
-            <p> Incorrect Answers</p>
+            <p> Incorrect Answers </p>
           </div>
     </main>
     <div>
