add paragraph to div class, to explain about the quiz

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
     <main>
          <!-- This is the main Game Area -->
           <div class="game-area">
+            <p>Each categoty of Quiz contains 5 questions.<br>
+                 You can choose to attempt any quiz of your choice in any order. <br>
+                You can also attempt all quizzes if you desire.<br>
+            The questions are designed to tickle your curosity and put your brains into top gear.ENJOY!</p>
             <!-- This is the Control Area -->
              <div class="controls-area">
                 <button class=""btn btn--big btn--green"></button>
@@ -59,6 +63,7 @@
 
              </div>
             <div class="quesion-area">
+                <span id="question">Question </span>
                 <span id=operand1>0</span>
                 <span id=operator>x</span>
                 <span id="operator2">0</span>
