create home list in nvabar for history.html and add home icon

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     </div>
 
     <main>
-         <!-- This is the main Game Area -->
-          <div class="game-area">
+         <!-- This is the main quiz Area -->
+          <div class="quiz-area">
             <p>Each categoty of Quiz contains 5 questions.<br>
                  You can choose to attempt any quiz of your choice in any order. <br>
                 You can also attempt all quizzes if you desire.<br>
             The questions are designed to tickle your curosity and put your brains into top gear.ENJOY!</p>
-            <!-- This is the Control Area -->
+            <!-- This is the questions  Area -->
              <div class="controls-area">
                 <button class=""btn btn--big btn--green"></button>
                 <!-- create font-awesome fonts -->
@@ -75,7 +75,7 @@
             </div>
             <button class="btn btn--gray" type="text">Submit Answer</button>
           
-          <div class="Score-area">
+          <div class="Answer-area">
             <p> Correct Answers</p>
             <p> Incorrect Answers </p>
           </div>
