create initial functions to use for quiz questions, results and create event listener for submit event

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -57,6 +57,7 @@
             <div class="quesion-area">
                 
                  <!-- for mobile users -->
+                  <p> Question AREA </p>
                 <p class="answer-message">Enter Answer </p>
             <input id="answer-box" type="text">
             </div>
