create style for class 'question area' and 'quiz'

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -49,12 +49,9 @@
             You can also attempt all quizzes if you desire.<br>
             The questions are designed to tickle your curosity and put your brains into top gear.ENJOY!</p>
         <!-- This is the questions  Area -->
-        <div class="quesion-area">
+        <div class="question-area">
             <h2 class="quiz">Question goes here </h2>
-            <!-- for mobile users -->
-            <p> Question AREA </p>
-            <p class="answer-message">Enter Answer </p>
-            <input id="answer-box" type="text">
+           
         </div>
         <div class="answer-buttons"> 
             <button class="btn">Answer 1</button>
