style 'btn' class and add transition and hover effect

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -42,7 +42,7 @@
             <li><a href="feedback.html">Feedback <i class="fa-solid fa-phone-flip"></i></a></li>
         </ul>
     </div>
-    <div class="quiz area">
+    <div class="quiz-area">
         <!-- This is the main quiz Area -->
         <p>Each categoty of Quiz contains 5 questions.<br>
             You can choose to attempt any quiz of your choice in any order. <br>
@@ -51,9 +51,9 @@
         <!-- This is the questions  Area -->
         <div class="question-area">
             <h2 class="quiz">Question goes here </h2>
-           
+
         </div>
-        <div class="answer-buttons"> 
+        <div class="answer-buttons">
             <button class="btn">Answer 1</button>
             <button class="btn">Answer 2</button>
             <button class="btn">Answer 3</button>
@@ -65,6 +65,7 @@
             <p> Incorrect Answers </p>
         </div>
     </div>
+
     <footer>
 
         <nav>
@@ -95,7 +96,7 @@
         <pre>                                                                 Copyright © 2024 - All Rights Reserved     Author: Roshan Neville Sequeira</pre>
 
     </footer>
-    </div>
+
     <!--Fontawesome script for our social media icons-->
     <script src="https://kit.fontawesome.com/fd8093e34d.js" crossorigin="anonymous"></script>
 </body>
