create next-button element and style in css

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -44,7 +44,7 @@
     </div>
     <div class="quiz-area">
         <!-- This is the main quiz Area -->
-        <p>Each categoty of Quiz contains 5 questions.<br>
+        <p>Each category of Quiz contains 5 questions.<br>
             You can choose to attempt any quiz of your choice in any order. <br>
             You can also attempt all quizzes if you desire.<br>
             The questions are designed to tickle your curosity and put your brains into top gear.ENJOY!</p>
@@ -59,7 +59,7 @@
             <button class="btn">Answer 3</button>
             <button class="btn">Answer 4</button>
         </div>
-
+        <button id="next-button">Next </button>
         <div class="Answer-area">
             <p> Correct Answers</p>
             <p> Incorrect Answers </p>
