--- a/history-quiz.html
+++ b/history-quiz.html
@@ -50,10 +50,10 @@
             The questions are designed to tickle your curosity and put your brains into top gear.ENJOY!</p>
         <!-- This is the questions  Area -->
         <div class="question-area">
-            <h2 class="quiz">Question goes here </h2>
+            <h2 id="quiz">Question goes here </h2>
 
         </div>
-        <div class="answer-buttons">
+        <div id="answer-buttons">
             <button class="btn">Answer 1</button>
             <button class="btn">Answer 2</button>
             <button class="btn">Answer 3</button>
@@ -99,6 +99,7 @@
 
     <!--Fontawesome script for our social media icons-->
     <script src="https://kit.fontawesome.com/fd8093e34d.js" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
