add comments to explain code in html

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -42,28 +42,37 @@
             <li><a href="feedback.html">Feedback <i class="fa-solid fa-phone-flip"></i></a></li>
         </ul>
     </div>
+    <!-- This is the main quiz Area -->
     <div class="quiz-area">
-        <!-- This is the main quiz Area -->
+
         <p>Each category of Quiz contains 5 questions.<br>
             You can choose to attempt any quiz of your choice in any order. <br>
             You can also attempt all quizzes if you desire.<br>
             The questions are designed to tickle your curosity and put your brains into top gear.ENJOY!</p>
-        <!-- This is the questions  Area -->
-        <div class="question-area">
-            <h2 id="quiz">Question goes here </h2>
 
+        <!-- create div for questions -->
+        <div class="question-area">
+            <!-- area to display questions -->
+            <h2 id="quiz">Question goes here </h2>
         </div>
+
         <div id="answer-buttons">
+            <!-- define clickable button for answers -->
             <button class="btn">Answer 1</button>
             <button class="btn">Answer 2</button>
             <button class="btn">Answer 3</button>
             <button class="btn">Answer 4</button>
         </div>
+
+        <!-- create button to go to next question-->
         <button id="next-button">Next </button>
+
+        <!-- create div to display answers -->
         <div class="Answer-area">
             <p> Correct Answers</p>
             <p> Incorrect Answers </p>
         </div>
+
     </div>
 
     <footer>
