write function to display answers

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -29,8 +29,7 @@
 </head>
 
 <body>
-
-    <div class="h1styling">
+        <div class="h1styling">
         <h1> <i class="fa-solid fa-puzzle-piece"> </i>This is the QUIZ of the Century</h1>
     </div>
     <div>
@@ -68,7 +67,7 @@
         <button id="next-button">Next </button>
 
         <!-- create div to display answers -->
-        <div class="Answer-area">
+        <div class="answer-area">
             <p> Correct Answers</p>
             <p> Incorrect Answers </p>
         </div>
@@ -105,7 +104,7 @@
         <pre>                                                                 Copyright © 2024 - All Rights Reserved     Author: Roshan Neville Sequeira</pre>
 
     </footer>
-
+    <script src="assets/js/script.js"></script>
     <!--Fontawesome script for our social media icons-->
     <script src="https://kit.fontawesome.com/fd8093e34d.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
