write function to display answers

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-        <div class="h1styling">
+    <div class="h1styling">
         <h1> <i class="fa-solid fa-puzzle-piece"> </i>This is the QUIZ of the Century</h1>
     </div>
     <div>
@@ -45,8 +45,6 @@
     <div class="quiz-area">
 
         <p>Each category of Quiz contains 5 questions.<br>
-            You can choose to attempt any quiz of your choice in any order. <br>
-            You can also attempt all quizzes if you desire.<br>
             The questions are designed to tickle your curosity and put your brains into top gear.ENJOY!</p>
 
         <!-- create div for questions -->
@@ -64,7 +62,7 @@
         </div>
 
         <!-- create button to go to next question-->
-        <button id="next-button">Next </button>
+        <button id="next-button">Submit </button>
 
         <!-- create div to display answers -->
         <div class="answer-area">
