create evenetlisterner for user clcik event and related function 'handlesubmitButton'

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -59,7 +59,7 @@
         </div>
 
         <!-- create button to go to next question-->
-        <button id="next-button">Submit </button>
+        <button id="submit-button"> SUBMIT</button>
 
         <!-- create div to display answers -->
         <div class="answer-area">
