add varibales to show right and wrong answers

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -62,9 +62,10 @@
         <button id="submit-button"> SUBMIT</button>
 
         <!-- create div to display answers -->
-        <div class="answer-area">
-            <p> Correct Answers</p>
-            <p> Incorrect Answers </p>
+        <div id ="answer-area">
+            <P id="correct-answer"> Correct Answwer</p>
+            <P id=" wrong-answer"> Wrong Answer</p>
+           
         </div>
 
     </div>
