save to github after license error on gitpod

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -30,7 +30,7 @@
 
 <body>
     <div class="h1styling">
-        <h1> <i class="fa-solid fa-puzzle-piece"> </i>This is the QUIZ of the Century</h1>
+        <h1> <i class="fa-solid fa-puzzle-piece"> </i>!!!Welcome to the Quiz !!!!</h1>
     </div>
     <div>
         <ul class="navbar">
@@ -42,8 +42,8 @@
     <!-- This is the main quiz Area -->
     <div class="quiz-area">
 
-        <p>Each category of Quiz contains 5 questions.<br>
-            The questions are designed to tickle your curosity and put your brains into top gear.ENJOY!</p>
+        <p>The Quiz contains 5 questions.<br>
+        Each question is based on Indian History around the time India gained independence from the British</p>
 
         <!-- create div for questions -->
         <div class="question-area">
