--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 
     <div class="h1styling">
-        <h1> <i class="fa-solid fa-puzzle-piece"> </i>This is the QUIZ of the Century</h1>
+        <h1> <i class="fa-solid fa-puzzle-piece"> </i>!!!Welcome to the Quiz !!!!</h1>
     </div>
     <div>
         <ul class="navbar">
