create submit button function

--- a/history-quiz.html
+++ b/history-quiz.html
@@ -56,12 +56,12 @@
 
         </div>
 
-        <!-- create button to go to next question-->
+        <!-- create submit button to go to next set of questions-->
         <button id="submit-button"> SUBMIT</button>
 
         <!-- create div to display answers -->
-        <div id="answer-area">
-            <P id="correct-answer"> Correct Answwer</p>
+        <div id="score-area">
+            <P id="correct-answer"> Correct Answer</p>
             <P id=" wrong-answer"> Wrong Answer</p>
 
         </div>
