style h2 header in quiz area

--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
     </div>
     <!-- This is the main quiz Area -->
     <div class="quiz-area">
-
-        <p>The Quiz contains 5 questions.<br>
-            Each question is based on Indian History around the time India gained independence from the British</p>
+    <h2 id="h2quiz-area">Rules for quizzers</h2>
+        <p id="p2quiz-area">The Quiz contains 5 questions, based on Indian History.<br>
+            Once an option is selected the other options are greyed out<br>
+            Click on the submit button to move to the next question<br>
+            At the end of the quiz , you will informed of your total score<br>
+        </p>
 
         <!-- create div for questions -->
         <div class="question-area">
@@ -58,12 +61,6 @@
         <!-- create submit button to go to next set of questions-->
         <button id="submit-button"> SUBMIT ==> </button>
 
-        <!-- create div to display answers -->
-        <div id="score-area">
-            <P id="correct-answer"> Correct Answer</p>
-            <P id=" wrong-answer"> Wrong Answer</p>
-
-        </div>
 
     </div>
 
@@ -94,8 +91,6 @@
 
             </ul>
         </nav>
-        <pre>                                                                 Copyright © 2024 - All Rights Reserved     Author: Roshan Neville Sequeira</pre>
-
     </footer>
     <script src="assets/js/script.js"></script>
     <!--Fontawesome script for our social media icons-->
