modify alert message to allow user select right option

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </div>
     <!-- This is the main quiz Area -->
     <div class="quiz-area">
-    <h2 id="h2quiz-area">Rules for quizzers</h2>
-        <p id="p2quiz-area">The Quiz contains 5 questions, based on Indian History.<br>
-            Once an option is selected the other options are greyed out<br>
+    <h2 id="h2quiz-area">Quiz Information</h2>
+        <p id="p2quiz-area">The quiz contains 5 questions, based on Indian History.<br>
+            Once the correct option is selected the other options are greyed out<br>
             Click on the submit button to move to the next question<br>
             At the end of the quiz , you will informed of your total score<br>
         </p>
@@ -53,7 +53,7 @@
             <h2 id="quiz">Question goes here </h2>
         </div>
 
-        <div id="answer-buttons">
+        <div id="answer-buttons" >
             <!-- define clickable button for answers -->
 
         </div>
