edit and modify content in  readme.md file

--- a/index.html
+++ b/index.html
@@ -30,38 +30,34 @@
 
 <body>
     <div class="h1styling">
-        <h1> <i class="fa-solid fa-puzzle-piece"> </i>!!! India- A History Quiz  !!!!</h1>
+        <h1> <i class="fa-solid fa-puzzle-piece"> </i> !! India- A History Quiz !! </h1>
     </div>
     <div>
         <ul class="navbar">
             <li><a href="index.html">Home<i class="fa-solid fa-house-user"></i></a></li>
-            <li><a href="feedback.html">Feedback <i class="fa-solid fa-phone-flip"></i></a></li>
         </ul>
     </div>
     <!-- This is the main quiz Area -->
     <div class="quiz-area">
-    <h2 id="h2quiz-area">Quiz Information</h2>
+        <h2 id="h2quiz-area">Quiz Information</h2>
         <p id="p2quiz-area">The quiz contains 5 questions, based on Indian History.<br>
-            Once the correct option is selected the other options are greyed out<br>
-            Click on the submit button to move to the next question<br>
-            At the end of the quiz , you will informed of your total score<br>
+            Once the correct option is selected the other options are greyed out.<br>
+            Click on the Next button to move to the next question.<br>
+            At the end of the quiz, you will informed of your total score.<br>
         </p>
-
         <!-- create div for questions -->
         <div class="question-area">
             <!-- area to display questions -->
             <h2 id="quiz">Question goes here </h2>
         </div>
 
-        <div id="answer-buttons" >
+        <div id="answer-buttons">
             <!-- define clickable button for answers -->
 
         </div>
 
-        <!-- create submit button to go to next set of questions-->
-        <button id="submit-button"> SUBMIT ==> </button>
-
-
+        <!-- create next button to go to next set of questions-->
+        <button id="next-button"> NEXT ==> </button>
     </div>
 
     <footer>
@@ -92,7 +88,7 @@
             </ul>
         </nav>
     </footer>
-    <script src="assets/js/script.js"></script>
+
     <!--Fontawesome script for our social media icons-->
     <script src="https://kit.fontawesome.com/fd8093e34d.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
