--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <meta name="author" content="Roshan Neville Sequeira">
 
     <!-- Favicon - referenced using relative paths from images folder -->
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/images/DODGER.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/DODGER.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/DODGER.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/images/dodger.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/dodger.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/dodger.png">
 
     <link rel="stylesheet" href="assets/css/style.css">
 
