add comment to code is css file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <button id="next-button"> NEXT ==> </button>
     </div>
 
-    <footer>
+    <footer id="foot">
 
         <nav>
             <ul class="nav">
@@ -88,7 +88,6 @@
             </ul>
         </nav>
     </footer>
-
     <!--Fontawesome script for our social media icons-->
     <script src="https://kit.fontawesome.com/fd8093e34d.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
