format readme file

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 
         </div>
 
+        <div id="reset-button">
+            <!-- define clickable button to reset the game -->
+
+        </div>
+
+
         <!-- create next button to go to next set of questions-->
         <button id="next-button"> NEXT ==> </button>
     </div>
