changes to code to hide next tab- when the question is displayed for the first time

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
         <h2 id="h2quiz-area">Quiz Information</h2>
         <p id="p2quiz-area">The quiz contains 5 questions, based on Indian History.<br>
             Once the correct option is selected the other options are greyed out.<br>
-            Click on the Next button to move to the next question.<br>
             At the end of the quiz, you will informed of your total score.<br>
         </p>
         <!-- create div for questions -->
@@ -55,15 +54,10 @@
             <!-- define clickable button for answers -->
 
         </div>
-
-        <div id="reset-button">
-            <!-- define clickable button to reset the game -->
-
-        </div>
-
-
+             
         <!-- create next button to go to next set of questions-->
         <button id="next-button"> NEXT ==> </button>
+        <button id="refresh-button"> REFRESH ⟳ </button>
     </div>
 
     <footer id="foot">
